@@ -5,10 +5,7 @@ setenv = RUN_CODE_TESTS=0
 
 [testenv:py27]
 deps = -rrequirements.txt
-commands =
-    pytest -m "not nocapture" {posargs}
-    pytest -s -m "nocapture" {posargs}
-
+commands = pytest {posargs}
 
 [testenv:code]
 setenv = RUN_CODE_TESTS=1
